docs/api/qiskit/0.37/qiskit.circuit.library.CPhaseGate.mdx
---
title: CPhaseGate
description: API reference for qiskit.circuit.library.CPhaseGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.CPhaseGate
---

# CPhaseGate

<Class id="qiskit.circuit.library.CPhaseGate" github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/circuit/library/standard_gates/p.py" signature="CPhaseGate(theta, label=None, ctrl_state=None)">
  Bases: [`qiskit.circuit.controlledgate.ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.controlledgate.ControlledGate")

  Controlled-Phase gate.

  This is a diagonal and symmetric gate that induces a phase on the state of the target qubit, depending on the control state.

  Can be applied to a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") with the [`cp()`](qiskit.circuit.QuantumCircuit#cp "qiskit.circuit.QuantumCircuit.cp") method.

  **Circuit symbol:**

  ```python
  q_0: ─■──
        │λ
  q_1: ─■──
  ```

  **Matrix representation:**

  $$
  \begin{split}CPhase =
      |0\rangle\langle 0| \otimes I + |1\rangle\langle 1| \otimes P =
      \begin{pmatrix}
          1 & 0 & 0 & 0 \\
          0 & 1 & 0 & 0 \\
          0 & 0 & 1 & 0 \\
          0 & 0 & 0 & e^{i\lambda}
      \end{pmatrix}\end{split}
  $$

  <Admonition title="See also" type="note">
    `CRZGate`: Due to the global phase difference in the matrix definitions of Phase and RZ, CPhase and CRZ are different gates with a relative phase difference.
  </Admonition>

  Create new CPhase gate.

  ## Methods Defined Here

  ### control

  <Function id="qiskit.circuit.library.CPhaseGate.control" name="control" signature="CPhaseGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Controlled version of this gate.

    **Parameters**

    *   **num\_ctrl\_qubits** (*int*) – number of control qubits.
    *   **label** (*str or None*) – An optional label for the gate \[Default: None]
    *   **ctrl\_state** (*int or str or None*) – control state expressed as integer, string (e.g. ‘110’), or None. If None, use all 1s.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  ### inverse

  <Function id="qiskit.circuit.library.CPhaseGate.inverse" name="inverse" signature="CPhaseGate.inverse()">
    Return inverted CPhase gate ($CPhase(\lambda){\dagger} = CPhase(-\lambda)$)
  </Function>

  ## Attributes

  ### condition\_bits

  <Attribute id="qiskit.circuit.library.CPhaseGate.condition_bits" name="condition_bits">
    Get Clbits in condition.

    **Return type**

    `List`\[[`Clbit`](qiskit.circuit.Clbit "qiskit.circuit.classicalregister.Clbit")]
  </Attribute>

  ### ctrl\_state

  <Attribute id="qiskit.circuit.library.CPhaseGate.ctrl_state" name="ctrl_state">
    Return the control state of the gate as a decimal integer.

    **Return type**

    `int`
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.CPhaseGate.decompositions" name="decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.CPhaseGate.definition" name="definition">
    Return definition in terms of other basic gates. If the gate has open controls, as determined from self.ctrl\_state, the returned definition is conjugated with X without changing the internal \_definition.

    **Return type**

    `List`
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.CPhaseGate.duration" name="duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.CPhaseGate.label" name="label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.CPhaseGate.name" name="name">
    Get name of gate. If the gate has open controls the gate name will become:

    > \<original\_name\_o\<ctrl\_state>

    where \<original\_name> is the gate name for the default case of closed control qubits and \<ctrl\_state> is the integer value of the control state for the gate.

    **Return type**

    `str`
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.CPhaseGate.num_clbits" name="num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_ctrl\_qubits

  <Attribute id="qiskit.circuit.library.CPhaseGate.num_ctrl_qubits" name="num_ctrl_qubits">
    Get number of control qubits.

    **Returns**

    The number of control qubits for the gate.

    **Return type**

    int
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.CPhaseGate.num_qubits" name="num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.CPhaseGate.params" name="params">
    Get parameters from base\_gate.

    **Returns**

    List of gate parameters.

    **Return type**

    list

    **Raises**

    **CircuitError** – Controlled gate does not define a base gate
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.CPhaseGate.unit" name="unit">
    Get the time unit of duration.
  </Attribute>
</Class>

